// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appearance renders 0 1`] = `
Array [
  .c0 {
  -webkit-appearance: 0;
  -moz-appearance: 0;
  appearance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: 0;
  -moz-appearance: 0;
  appearance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: 0;
  -moz-appearance: 0;
  appearance: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: 0;
  -moz-appearance: 0;
  appearance: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders function 1`] = `
Array [
  .c0 {
  -webkit-appearance: hasnot;
  -moz-appearance: hasnot;
  appearance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: has;
  -moz-appearance: has;
  appearance: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: hasnot;
  -moz-appearance: hasnot;
  appearance: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: has;
  -moz-appearance: has;
  appearance: has;
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-appearance: invalid.path.1;
  -moz-appearance: invalid.path.1;
  appearance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: invalid.path.1;
  -moz-appearance: invalid.path.1;
  appearance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: invalid.path.1;
  -moz-appearance: invalid.path.1;
  appearance: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: invalid.path.1;
  -moz-appearance: invalid.path.1;
  appearance: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders negative number 1`] = `
Array [
  .c0 {
  -webkit-appearance: -54881;
  -moz-appearance: -54881;
  appearance: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: -54881;
  -moz-appearance: -54881;
  appearance: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: -42365;
  -moz-appearance: -42365;
  appearance: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: -42365;
  -moz-appearance: -42365;
  appearance: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: July;
    -moz-appearance: July;
    appearance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: August;
    -moz-appearance: August;
    appearance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: September;
    -moz-appearance: September;
    appearance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-appearance: November;
    -moz-appearance: November;
    appearance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: July;
    -moz-appearance: July;
    appearance: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: August;
    -moz-appearance: August;
    appearance: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: September;
    -moz-appearance: September;
    appearance: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-appearance: November;
    -moz-appearance: November;
    appearance: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: May;
    -moz-appearance: May;
    appearance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: June;
    -moz-appearance: June;
    appearance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: April;
    -moz-appearance: April;
    appearance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-appearance: November;
    -moz-appearance: November;
    appearance: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: May;
    -moz-appearance: May;
    appearance: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: June;
    -moz-appearance: June;
    appearance: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-appearance: April;
    -moz-appearance: April;
    appearance: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-appearance: November;
    -moz-appearance: November;
    appearance: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-appearance: July;
    -moz-appearance: July;
    appearance: July;
  }
}

@media April {
  .c0 {
    -webkit-appearance: August;
    -moz-appearance: August;
    appearance: August;
  }
}

@media January {
  .c0 {
    -webkit-appearance: September;
    -moz-appearance: September;
    appearance: September;
  }
}

@media April {
  .c0 {
    -webkit-appearance: November;
    -moz-appearance: November;
    appearance: November;
  }
}

@media June {
  .c0 {
    -webkit-appearance: August;
    -moz-appearance: August;
    appearance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-appearance: July;
    -moz-appearance: July;
    appearance: July;
  }
}

@media April {
  .c0 {
    -webkit-appearance: August;
    -moz-appearance: August;
    appearance: August;
  }
}

@media January {
  .c0 {
    -webkit-appearance: September;
    -moz-appearance: September;
    appearance: September;
  }
}

@media April {
  .c0 {
    -webkit-appearance: November;
    -moz-appearance: November;
    appearance: November;
  }
}

@media June {
  .c0 {
    -webkit-appearance: August;
    -moz-appearance: August;
    appearance: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-appearance: January;
    -moz-appearance: January;
    appearance: January;
  }
}

@media April {
  .c0 {
    -webkit-appearance: December;
    -moz-appearance: December;
    appearance: December;
  }
}

@media January {
  .c0 {
    -webkit-appearance: April;
    -moz-appearance: April;
    appearance: April;
  }
}

@media April {
  .c0 {
    -webkit-appearance: May;
    -moz-appearance: May;
    appearance: May;
  }
}

@media June {
  .c0 {
    -webkit-appearance: June;
    -moz-appearance: June;
    appearance: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-appearance: January;
    -moz-appearance: January;
    appearance: January;
  }
}

@media April {
  .c0 {
    -webkit-appearance: December;
    -moz-appearance: December;
    appearance: December;
  }
}

@media January {
  .c0 {
    -webkit-appearance: April;
    -moz-appearance: April;
    appearance: April;
  }
}

@media April {
  .c0 {
    -webkit-appearance: May;
    -moz-appearance: May;
    appearance: May;
  }
}

@media June {
  .c0 {
    -webkit-appearance: June;
    -moz-appearance: June;
    appearance: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-appearance: 54881;
  -moz-appearance: 54881;
  appearance: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: 54881;
  -moz-appearance: 54881;
  appearance: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: 42365;
  -moz-appearance: 42365;
  appearance: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: 42365;
  -moz-appearance: 42365;
  appearance: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders string 1`] = `
Array [
  .c0 {
  -webkit-appearance: July;
  -moz-appearance: July;
  appearance: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: July;
  -moz-appearance: July;
  appearance: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: June;
  -moz-appearance: June;
  appearance: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: June;
  -moz-appearance: June;
  appearance: June;
}

<div
    className="c0"
  />,
]
`;

exports[`appearance renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-appearance: DarkSlateBlue;
  -moz-appearance: DarkSlateBlue;
  appearance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: DarkSlateBlue;
  -moz-appearance: DarkSlateBlue;
  appearance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: DarkSlateBlue;
  -moz-appearance: DarkSlateBlue;
  appearance: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-appearance: DarkSlateBlue;
  -moz-appearance: DarkSlateBlue;
  appearance: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
